--- a/src/main/resources/templates/fragments/cities.html
+++ b/src/main/resources/templates/fragments/cities.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.thymeleaf.org">
+<html lang="ru">
 <body>
 <div id="list" class="container">
     <label for="exampleDataList" class="form-label">SELECT LIST</label>
