--- a/src/main/resources/templates/fragments/deleteModal.html
+++ b/src/main/resources/templates/fragments/deleteModal.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ru">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <title>Accept Delete</title>
 </head>
 <body>
 <!-- Модальное окно подтверждения удаления -->
